--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,6 @@ services:
     volumes:
       - ./db-data/:/var/lib/postgresql/data/
     environment:
-      POSTGRES_USER: env.POSTGRES_USER
-      POSTGRES_PASSWORD: env.POSTGRES_PASSWORD
-      POSTGRES_DB: env.POSTGRES_DB
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
