--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,6 @@ services:
     volumes:
       - ./db-data/:/var/lib/postgresql/data/
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${jenkins.POSTGRES_USER}
+      POSTGRES_PASSWORD: ${jenkins.POSTGRES_PASSWORD}
+      POSTGRES_DB: ${jenkins.POSTGRES_DB}
