--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - .:/rails
     depends_on:  # Make your Rails app wait for the database to start
       - db
+    env_file:
+      - .env
 
   db:   # Your PostgreSQL database service
     image: postgres:14-alpine
@@ -19,3 +21,5 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - .env 
